--- a/index.pug
+++ b/index.pug
@@ -126,4 +126,5 @@ html
       script(src='/public/js/dashboard-modern.js')
       script(src='/public/js/intro.min.js')
       script(src='/public/js/select2.min.js')
+      script(src='/public/js/core.js')
       script(src= dir)
