--- a/index.pug
+++ b/index.pug
@@ -54,7 +54,7 @@ html
                   i.material-icons radio_button_unchecked
                   span Invoice
               li
-                a.waves-effect.waves-cyan(href='/products/create/' tabindex='0')
+                a.waves-effect.waves-cyan(href='/products/' tabindex='0')
                   i.material-icons radio_button_unchecked
                   span Products & Services
         li.bold
@@ -68,7 +68,7 @@ html
                   i.material-icons radio_button_unchecked
                   span Bills
               li
-                a.waves-effect.waves-cyan(href='/vendors/create/' tabindex='0')
+                a.waves-effect.waves-cyan(href='/vendors/' tabindex='0')
                   i.material-icons radio_button_unchecked
                   span Vendors
         li.bold
