--- a/index.pug
+++ b/index.pug
@@ -5,8 +5,6 @@ html
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
     meta(name='viewport' content='width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui')
     title Catetanku
-    link(rel='apple-touch-icon' href='https://pixinvent.com/materialize-material-design-admin-template/app-assets/images/favicon/apple-touch-icon-152x152.png')
-    link(rel='shortcut icon' type='image/x-icon' href='https://pixinvent.com/materialize-material-design-admin-template/app-assets/images/favicon/favicon-32x32.png')
     // BEGIN: VENDOR CSS
     link(rel='stylesheet' type='text/css' href='/public/css/vendors.min.css')
     link(rel='stylesheet' type='text/css' href='/public/css/animate.css')
@@ -74,16 +72,6 @@ html
         li.bold
           a.collapsible-header.waves-effect.waves-cyan(href='JavaScript:void(0)' tabindex='0')
             i.material-icons dvr
-            span.menu-title Accounting
-          .collapsible-body
-            ul.collapsible.collapsible-sub(data-collapsible='accordion')
-              li
-                a.waves-effect.waves-cyan(href='/' tabindex='0')
-                  i.material-icons radio_button_unchecked
-                  span -
-        li.bold
-          a.collapsible-header.waves-effect.waves-cyan(href='JavaScript:void(0)' tabindex='0')
-            i.material-icons dvr
             span.menu-title Reports
           .collapsible-body
             ul.collapsible.collapsible-sub(data-collapsible='accordion')
@@ -106,11 +94,11 @@ html
           .container
             span
               | © 2020 
-              a(href='http://themeforest.net/user/pixinvent/portfolio?ref=pixinvent' target='_blank') PIXINVENT
+              a(href='' target='_blank') PIXINVENT
               |  All rights reserved.
             span.right.hide-on-small-only
               | Design and Developed by 
-              a(href='https://pixinvent.com/') PIXINVENT
+              a(href='') PIXINVENT
       // END: Footer
       // BEGIN VENDOR JS
       script(src='/public/js/vendors.min.js')
