--- a/index.pug
+++ b/index.pug
@@ -16,6 +16,7 @@ html
     link(rel='stylesheet' type='text/css' href='/public/css/intro.min.css')
     link(rel='stylesheet' type='text/css' href='/public/css/custom.css')
     link(rel='stylesheet' type='text/css' href='/public/css/select2.min.css')
+    link(rel='stylesheet' type='text/css' href='/public/css/perfect-scrollbar.min.css')
     link(rel='stylesheet' type='text/css' href='' + dircss)
   // END: Head
   body.vertical-layout.page-header-light.vertical-menu-collapsible.vertical-gradient-menu.2-columns(data-open='click' data-menu='vertical-gradient-menu' data-col='2-columns')
@@ -101,6 +102,8 @@ html
               a(href='') PIXINVENT
       // END: Footer
       // BEGIN VENDOR JS
+      
+      script(src='/public/js/perfect-scrollbar.min.js')
       script(src='/public/js/vendors.min.js')
       // BEGIN VENDOR JS
       // BEGIN PAGE VENDOR JS
